--- a/style.css
+++ b/style.css
@@ -1,53 +1,82 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
 body {
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
 }
+
 .container {
-    width: 450px;
+  width: 450px;
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
+
 h1 {
-    color: #364547;
-    margin-bottom: 0.5em;
+  color: #364547;
+  margin-bottom: 0.5em;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
 }
-container .box {
-    width: 100%;
-    display: flex;
+
+.box {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
 }
-.box .div {
-    width: 100%;
+
+.left_box,
+.right_box {
+  width: 48%;
 }
+
 select {
-    width: 95%; height: 40px;
-    font-size: 1em; cursor: pointer;
-    outline: none;
-    background: #7868e6;
-    color: white;
-    margin: 0.2em 0;
-    padding: 0 1em;
-    border-radius: 10px;
-    border: none;
+  width: 100%;
+  height: 40px;
+  font-size: 1em;
+  cursor: pointer;
+  outline: none;
+  background: #7868e6;
+  color: white;
+  margin: 0.2em 0;
+  padding: 0 1em;
+  border-radius: 10px;
+  border: none;
 }
+
 input {
-    width: 95%; height: 40px;
-    font-size: 1em; margin: 0.2em 0;
-    border: none;
-    background: #edeef7;
-    outline: none;
-    padding: 0 1em;
+  width: 100%;
+  height: 40px;
+  font-size: 1em;
+  margin: 0.2em 0;
+  border: none;
+  background: #edeef7;
+  outline: none;
+  padding: 0 1em;
+  border-radius: 5px;
 }
+
 .btn {
-    width: 95%; height: 40px;
-    background: #364547;
-    color: white;
-    border: none;
-    cursor: pointer;
-    font-size: 1em;
-    margin: 0.5em 0;
+  width: 100%;
+  height: 40px;
+  background: #364547;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 1em;
+  margin: 0.5em 0;
+  border-radius: 10px;
+  transition: background 0.3s;
+}
+
+.btn:hover {
+  background: #4a5f62;
 }
